[UPPDATE] Nav Bar mod and uppdate grid img

--- a/css/index.css
+++ b/css/index.css
@@ -726,56 +726,42 @@ section {
 }
 
 /*menu nav*/
-.menu {
+header {
+  width: 100%;
+  background-image: linear-gradient(to right, #080f4b, blacK);
+}
+header nav {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
-  justify-content: center;
-  list-style: none;
-  margin: 0;
-  padding: 1cm;
-  width: 80%;
-  line-height: 150px;
+  justify-content: space-around;
+  align-items: center;
 }
-.menu li {
-  padding: 1mm;
-  margin: auto;
-  padding: 0 10px;
+header nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none;
+  gap: 2em;
 }
-.menu li a {
-  color: #107594;
-  font-size: 25px;
+header nav ul li a {
+  color: whitesmoke;
+  font-size: 20px;
   font-weight: auto;
-  padding: 6mm;
+  padding: 4mm;
   text-transform: uppercase;
   border: solid;
-  border-color: #107594;
-  background-color: #0f0000;
+  border-color: silver;
+  background-color: #03033d;
   font-family: "Limelight", cursive;
 }
-.menu li a:hover {
-  background-color: grey;
+header nav ul li a:hover {
+  background-color: #107594;
   color: #210849;
   text-decoration-line: none;
   padding: 20px;
   border-style: solid;
-  border-color: #011b01;
-}
-
-/*header*/
-.topheader {
-  padding: 1;
-  margin: 0 auto;
-  background-image: linear-gradient(to right, blacK, #080f4b);
-}
-.topheader .topnav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 25px;
-  -moz-box-shadow: inset -47px 18px 17px #000000;
-  -webkit-box-shadow: inset -47px 18px 17px #000000;
-  box-shadow: inset -47px 18px 17px #000000;
+  border-color: grey;
 }
 
 /*logo*/
@@ -1076,27 +1062,80 @@ section {
 }
 
 /*responsive*/
-@media screen and (max-width: 740px) {
-  body {
-    background-color: #2e18ad;
-  }
-
+@media screen and (max-width: 1024px) {
   .topnav {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    background-color: #064d15;
+    height: 500px;
   }
 
+  header {
+    width: 100%;
+    padding: 2rem 0;
+    background-image: linear-gradient(to right, #080f4b, blacK);
+  }
+  header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  header nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+    gap: 3em;
+  }
+  header nav ul li a {
+    display: flex;
+    align-items: center;
+    color: red;
+    font-size: 25px;
+    font-weight: auto;
+    padding: 0mm;
+    text-transform: uppercase;
+    border: solid;
+    border-color: #107594;
+    background-color: #d5d6c4;
+    font-family: "Limelight", cursive;
+  }
+  header nav ul li a:hover {
+    background-color: #107594;
+    color: #210849;
+    text-decoration-line: none;
+    padding: 10 px;
+    border-style: solid;
+    border-color: grey;
+  }
+
+  .logo {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+  }
   .logo img {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     height: 6cm;
-    margin: auto;
-    border-color: #0683b4;
+    border-radius: 30%;
+    border: solid;
+    border-color: #e5ebea;
+    transition: all;
+    margin: 0 auto;
+  }
+  .logo img:hover {
+    height: 6cm;
+    border-color: #df0c0c;
+    border-radius: 10%;
+    border-style: dotted;
   }
 
   footer {
@@ -1291,6 +1330,421 @@ section {
     align-items: center;
     column-gap: 100mm;
     height: 5cm;
+    background-image: linear-gradient(to right, #1c1c20, #463826);
+    width: 100%;
+  }
+
+  .cAlculadora {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 5cm;
+    width: 100%;
+  }
+
+  .cAlculadora img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 3cm;
+  }
+
+  .mEnsuales {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 5cm;
+    width: 100%;
+  }
+
+  .grid-cHoque {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+    width: 100%;
+  }
+
+  .bannerUno {
+    grid-area: bannerUno;
+    background-image: linear-gradient(to right, #1d8613, #263a46);
+    padding: 5mm;
+    font-family: Tourney;
+    font-size: 1cm;
+    width: 100%;
+    height: 150px;
+  }
+
+  .bannerUno h1 {
+    font-size: 50px;
+  }
+
+  .sUfrio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 5cm;
+    width: 100%;
+  }
+
+  .cHocada {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 5cm;
+    width: 100%;
+  }
+
+  .cHocada img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 3cm;
+  }
+
+  .sIniestro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 5cm;
+    width: 100%;
+  }
+
+  .wrapp {
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .wrapp .static-txt {
+    color: #fff;
+    font-size: 60px;
+    font-weight: 400;
+  }
+
+  .wrapp .dynamic-txts {
+    margin-left: 15px;
+    height: 90px;
+    line-height: 90px;
+    overflow: hidden;
+  }
+
+  .dynamic-txts li {
+    list-style: none;
+    color: #FC6D6D;
+    font-size: 60px;
+    font-weight: 500;
+    position: relative;
+    top: 0;
+    animation: slide 12s steps(4) infinite;
+  }
+
+  @keyframes slide {
+    100% {
+      top: -360px;
+    }
+  }
+  .dynamic-txts li span {
+    position: relative;
+    margin: 5px 0;
+    line-height: 90px;
+  }
+
+  .dynamic-txts li span::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    animation: typing 1s steps(2) infinite;
+  }
+
+  @keyframes typing {
+    40%, 60% {
+      left: calc(100% + 30px);
+    }
+    100% {
+      left: 0;
+    }
+  }
+}
+/*Responsive 2*/
+@media screen and (max-width: 737px) {
+  .topnav {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 500px;
+  }
+
+  header {
+    width: 100%;
+    padding: 2rem 0;
+    background-image: linear-gradient(to right, #080f4b, blacK);
+  }
+  header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  header nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    list-style-type: none;
+    gap: 3em;
+  }
+  header nav ul li a {
+    display: flex;
+    align-items: center;
+    color: #107594;
+    font-size: 15px;
+    font-weight: auto;
+    padding: 0mm;
+    text-transform: uppercase;
+    border: solid;
+    border-color: #107594;
+    background-color: #ceecd2;
+    font-family: "Limelight", cursive;
+  }
+  header nav ul li a:hover {
+    background-color: #107594;
+    color: #210849;
+    text-decoration-line: none;
+    padding: 10 px;
+    border-style: solid;
+    border-color: grey;
+  }
+
+  .logo {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    width: 20%;
+  }
+  .logo img {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    height: 5cm;
+    border-radius: 30%;
+    border: solid;
+    border-color: #e5ebea;
+    transition: all;
+    margin: 0 auto;
+  }
+  .logo img:hover {
+    height: 5cm;
+    border-color: #3574c5;
+    border-radius: 10%;
+    border-style: dotted;
+  }
+
+  footer {
+    background-color: #09b11f;
+  }
+
+  .grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .grid img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+    height: 4cm;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .iNtegrantes {
+    display: flex;
+    flex-direction: column;
+    column-gap: 30mm;
+  }
+
+  .bAnner {
+    display: flex;
+    flex-direction: column;
+    column-gap: 30mm;
+  }
+
+  .cIvil {
+    display: flex;
+    flex-direction: column;
+    column-gap: 30mm;
+  }
+
+  .lAboral {
+    display: flex;
+    flex-direction: column;
+    column-gap: 30mm;
+  }
+
+  .pEnal {
+    display: flex;
+    flex-direction: column;
+    column-gap: 30mm;
+  }
+
+  .cOntacto {
+    display: flex;
+    flex-direction: column;
+    column-gap: 30mm;
+  }
+
+  .dElitos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .dElitos div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .dElitos img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .elLaboral {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .elLaboral div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+  }
+
+  .elLaboral img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+  }
+
+  .grid-eLcontacto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .bannerUno {
+    grid-area: bannerUno;
+    background-image: linear-gradient(to right, #131b86, #263a46);
+    padding: 3mm;
+    font-family: Tourney;
+    font-size: 2cm;
+  }
+
+  .tWiter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+  }
+
+  .tWiter img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 3cm;
+    border: solid;
+    border-color: #059c19;
+    margin: 0;
+  }
+
+  .gRam {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+  }
+
+  .gRam img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 3cm;
+    border: solid;
+    border-color: #059c19;
+    margin: 0;
+  }
+
+  .eLlinke {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .eLlinke img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 3cm;
+    border: solid;
+    border-color: #059c19;
+    margin: 0;
+  }
+
+  .grid-lAscuotas {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 30mm;
+  }
+
+  .gRantitulo {
+    grid-area: bannerUno;
+    background-image: linear-gradient(to right, #1d8613, #263a46);
+    padding: 25mm;
+    font-family: Tourney;
+    font-size: 2cm;
+  }
+
+  .mInimos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    column-gap: 100mm;
+    height: 5cm;
   }
 
   .cAlculadora {
@@ -1330,6 +1784,19 @@ section {
     padding: 25mm;
     font-family: Tourney;
     font-size: 2cm;
+  }
+
+  .bannerUno {
+    grid-area: bannerUno;
+    background-image: linear-gradient(to right, #1d8613, #263a46);
+    padding: 22mm;
+    width: 100%;
+    height: 150px;
+  }
+
+  .bannerUno h1 {
+    font-size: 30px;
+    font-family: Tourney;
   }
 
   .sUfrio {
