--- a/scss/_globales.scss
+++ b/scss/_globales.scss
@@ -1,7 +1,7 @@
 /*normalizadores*/
 * {
-    margin: 0 ;
-    padding: 0;
+    margin: 0;
+    padding: 0 auto;
     text-decoration: none;
     box-sizing: border-box;
     color: $primary-color;
