--- a/css/index.css
+++ b/css/index.css
@@ -967,7 +967,7 @@ header nav ul li a:hover {
 }
 
 .premium .package-name::before {
-  content: "intermedio";
+  content: "Intermedio";
   font-size: 24px;
 }
 
