--- a/scss/index.scss
+++ b/scss/index.scss
@@ -337,7 +337,6 @@ header {
   .btn a:hover{
 	animation: rotate 0.6s linear infinite;
 	text-decoration: none;
-
   }
   @keyframes rotate {
 	100%{
@@ -505,7 +504,7 @@ header {
 	content: "Inicial";
   }
   .premium .package-name::before{
-	content: "intermedio";
+	content: "Intermedio";
 	font-size: 24px;
   }
   .ultimate .package-name::before{
